--- a/conf/maplin3.conf
+++ b/conf/maplin3.conf
@@ -52,17 +52,15 @@
 		Allow from all
 	</Directory>
 
-#	ErrorLog /var/log/apache2/error.log
-#	ErrorLog /opt/maplin3/logs/error.log
-	ErrorLog "|/usr/sbin/rotatelogs /opt/maplin3/logs/error.log.%Y%m%d 86400"
+#	ErrorLog "|/usr/sbin/rotatelogs /opt/maplin3/logs/error.log.%Y%m%d 86400"
+	ErrorLog "|/usr/sbin/rotatelogs /opt/maplin3/logs/error.log.%Y%m%d-%H%M%S 10M"
 
 	# Possible values include: debug, info, notice, warn, error, crit,
 	# alert, emerg.
 	LogLevel warn
 
-#	CustomLog /var/log/apache2/access.log combined
-#	CustomLog /opt/maplin3/logs/access.log combined
-	CustomLog "|/usr/sbin/rotatelogs /opt/maplin3/logs/access.log.%Y%m%d 86400" combined
+#	CustomLog "|/usr/sbin/rotatelogs /opt/maplin3/logs/access.log.%Y%m%d 86400" combined
+	CustomLog "|/usr/sbin/rotatelogs /opt/maplin3/logs/access.log.%Y%m%d-%H%M%S 5M" combined
 	ServerSignature On
 
 </VirtualHost>
