playing with ssl

--- a/conf/maplin3.conf
+++ b/conf/maplin3.conf
@@ -1,17 +1,11 @@
-#NameVirtualHost 127.0.2.1
-#NameVirtualHost 192.168.0.17
-#NameVirtualHost 206.45.125.194:8088
-#<VirtualHost 127.0.2.1>
-#	ServerAdmin maplin3@localhost
-#	ServerName mintaka.gotdns.org
-#	ServerName library.net
-#	ServerName mblib.net
-	
-#NameVirtualHost *:80
+#<VirtualHost mintaka.gotdns.org:80>
 <VirtualHost *:80>
-#	ServerName localhost:80
-	Servername maplin.gets-it.net:80
-#	ServerAlias 127.0.0.1:80
+	ServerName mintaka.gotdns.org
+	Redirect / https://mintaka.gotdns.org/
+</VirtualHost>
+
+<VirtualHost *:443>
+	ServerName mintaka.gotdns.org
 	# for perl to find my local modules
 	SetEnv PERL5LIB /opt/maplin3/modules
 
@@ -66,4 +60,9 @@
 	CustomLog "|/usr/sbin/rotatelogs /opt/maplin3/logs/access.log.%Y%m%d-%H%M%S 5M" combined
 	ServerSignature On
 
+	SSLEngine on	
+#        SSLOptions +StrictRequire
+        SSLCertificateFile /etc/ssl/certs/mintaka.pem
+#        SSLCertificateFile /etc/ssl/certs/.crt
+#        SSLCertificateKeyFile /etc/ssl/private/server.key 
 </VirtualHost>
