library name as tooltip on hover over library symbol

--- a/conf/maplin3.conf
+++ b/conf/maplin3.conf
@@ -62,7 +62,7 @@
 
 	SSLEngine on	
 #        SSLOptions +StrictRequire
-        SSLCertificateFile /etc/ssl/certs/mintaka.pem
-#        SSLCertificateFile /etc/ssl/certs/.crt
-#        SSLCertificateKeyFile /etc/ssl/private/server.key 
+#        SSLCertificateFile /etc/ssl/certs/mintaka.pem
+        SSLCertificateFile /etc/ssl/certs/mintaka.crt
+        SSLCertificateKeyFile /etc/ssl/private/mintaka.key 
 </VirtualHost>
