--- a/conf/fILL.conf
+++ b/conf/fILL.conf
@@ -7,7 +7,7 @@
 <VirtualHost *:443>
 	ServerName mintaka.gotdns.org
 	# for perl to find my local modules
-	SetEnv PERL5LIB /opt/maplin3/modules
+	SetEnv PERL5LIB /opt/fILL/modules
 
 	# under mod_perl, taint mode is on... which means that PERL5LIB is ignored.
 	# Try this:
@@ -15,20 +15,20 @@
 	#PerlSwitches -I/home/dev1/lib/perl
 
 	# for C::A and H::T to find my templates
-	SetEnv HTML_TEMPLATE_ROOT /opt/maplin3/templates
+	SetEnv HTML_TEMPLATE_ROOT /opt/fILL/templates
 
 	# for scripts to use as the base dir for data files, uploads, etc.
-	SetEnv EXTERNALS /opt/maplin3/externals
+	SetEnv EXTERNALS /opt/fILL/externals
 
 	# for DBI to find a database connection
 	# DBI_DSN and/or DBI_USER may also be defined here
 
-	DocumentRoot /opt/maplin3/htdocs/
+	DocumentRoot /opt/fILL/htdocs/
 	<Directory />
 		Options FollowSymLinks
 		AllowOverride None
 	</Directory>
-	<Directory /opt/maplin3/htdocs/>
+	<Directory /opt/fILL/htdocs/>
 		Options Indexes FollowSymLinks MultiViews
 		AllowOverride None
 		Order allow,deny
@@ -40,8 +40,8 @@
                 #RedirectMatch ^/$ /apache2-default/
 	</Directory>
 
-	ScriptAlias /cgi-bin/ /opt/maplin3/bin/
-	<Directory "/opt/maplin3/bin">
+	ScriptAlias /cgi-bin/ /opt/fILL/bin/
+	<Directory "/opt/fILL/bin">
 		AllowOverride None
 		Options +ExecCGI -MultiViews +SymLinksIfOwnerMatch
 		Order allow,deny
@@ -49,15 +49,15 @@
 		#Deny from 206.45.206.151  
 	</Directory>
 
-#	ErrorLog "|/usr/sbin/rotatelogs /opt/maplin3/logs/error.log.%Y%m%d 86400"
-	ErrorLog "|/usr/sbin/rotatelogs /opt/maplin3/logs/error.log.%Y%m%d-%H%M%S 10M"
+#	ErrorLog "|/usr/sbin/rotatelogs /opt/fILL/logs/error.log.%Y%m%d 86400"
+	ErrorLog "|/usr/sbin/rotatelogs /opt/fILL/logs/error.log.%Y%m%d-%H%M%S 10M"
 
 	# Possible values include: debug, info, notice, warn, error, crit,
 	# alert, emerg.
 	LogLevel warn
 
-#	CustomLog "|/usr/sbin/rotatelogs /opt/maplin3/logs/access.log.%Y%m%d 86400" combined
-	CustomLog "|/usr/sbin/rotatelogs /opt/maplin3/logs/access.log.%Y%m%d-%H%M%S 5M" combined
+#	CustomLog "|/usr/sbin/rotatelogs /opt/fILL/logs/access.log.%Y%m%d 86400" combined
+	CustomLog "|/usr/sbin/rotatelogs /opt/fILL/logs/access.log.%Y%m%d-%H%M%S 5M" combined
 	ServerSignature On
 
 	SSLEngine on	
