daemonizable server scaffolding

--- a/conf/fILLreporter.conf
+++ b/conf/fILLreporter.conf
@@ -7,7 +7,7 @@ group       david
 ### logging ?
 log_file    /opt/fILL/logs/fILLreporter.log
 log_level   4
-pid_file    /var/run/fILLreporter.pid
+pid_file    /tmp/fILLreporter.pid
 
 ### optional syslog directive
 ### used in place of log_file above
@@ -24,6 +24,7 @@ pid_file    /var/run/fILLreporter.pid
 #cidr_allow  192.0.2.0/24
 #cidr_deny   192.0.2.4/30
 allow	     localhost
+allow	     127.0.0.1
 
 ### background the process?
 background  1
