move clear-acquisitions code out of template and into js file

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,34 @@
 *.orig
 *.tar.gz
 *blocks-2014-*
+css-classes-in-fILL.txt
+devdocs/analyzing-requests.txt
+devdocs/sql-to-get-unfilled-reasons.txt
+externals/bst.err
+externals/bst.txt
+externals/carhartl-jquery-cookie-92b7715/
+externals/carhartl-jquery-cookie-v1.4.1-0-g7f88a4e.zip
+externals/jQuery-slimScroll-1.3.0.zip
+externals/jQuery-slimScroll-1.3.0/
+find-css-classes-and-ids-cleanup.pl
+find-css-classes-and-ids.sh
+hmm.txt
+htdocs/img/Manitoba_region_map.png
+htdocs/img/fill-lib-logo-theme2.xcf
+htdocs/jqtest.html
+htdocs/plugins/DataTables-1.10.2/examples/resources/.directory
+htdocs/plugins/DataTables-1.10.2/media/images/.directory
+htdocs/themes/fILL-contrast-0.1/
+htdocs/themes/fILL-night/
+htdocs/themes/fILL-wonky/
+htdocs/themes/jquery-ui-1.11.2.custom.zip
+install-with-pazpar-debug-logging.sh
+modules/Biblio-SIP2-Client/
+pazpar2/settings/Jolys.xml
+services/reports/report-net-all-libraries.pl
+updates/20.will-not-loan-newer-than.sql
+updates/fILL-most-requested.sql
+updates/new-ucn-libraries.sql
+updates/search-test.html
+updates/tmp-drop-tables-including-rotations.sql
+updates/update-french-libraries.sql
