--- a/.gitignore
+++ b/.gitignore
@@ -28,11 +28,11 @@ htdocs/themes/fILL-night/
 htdocs/themes/fILL-wonky/
 htdocs/themes/jquery-ui-1.11.2.custom.zip
 install-with-pazpar-debug-logging.sh
-modules/Biblio-SIP2-Client/blib/
+modules/Biblio-SIP2-Client/blib/**
 modules/Biblio-SIP2-Client/Makefile
 modules/Biblio-SIP2-Client/MYMETA.json
 modules/Biblio-SIP2-Client/MYMETA.yml
-modules/Biblio-Authentication/blib/
+modules/Biblio-Authentication/blib/**
 modules/Biblio-Authentication/Makefile
 modules/Biblio-Authentication/MYMETA.json
 modules/Biblio-Authentication/MYMETA.yml
