--- a/modules/fILL-charts/MYMETA.yml
+++ b/modules/fILL-charts/MYMETA.yml
@@ -3,20 +3,21 @@ abstract: 'The great new fILL::charts!'
 author:
   - 'David Christensen <David.A.Christensen@gmail.com>'
 build_requires:
-  Test::More: 0
+  Test::More: '0'
 configure_requires:
-  ExtUtils::MakeMaker: 0
+  ExtUtils::MakeMaker: '0'
 dynamic_config: 0
-generated_by: 'ExtUtils::MakeMaker version 6.66, CPAN::Meta::Converter version 2.133380'
+generated_by: 'ExtUtils::MakeMaker version 6.98, CPAN::Meta::Converter version 2.150005'
 license: gpl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
+  version: '1.4'
 name: fILL-charts
 no_index:
   directory:
     - t
     - inc
 requires:
-  perl: 5.006
-version: 0.01
+  perl: '5.006'
+version: '0.01'
+x_serialization_backend: 'CPAN::Meta::YAML version 0.016'
