--- a/conf/fILL.conf
+++ b/conf/fILL.conf
@@ -36,12 +36,16 @@
 	RewriteCond %{REQUEST_URI} /search.pz2/
 	RewriteRule search.pz2 - [L,NC]
 
+	# Don't touch the localisation stuff
+	RewriteCond %{REQUEST_URI} /localisation/
+	RewriteRule localisation - [L,NC]
+
 	# URLs of the form /public/test/en become /cgi-bin/public.cgi?rm=test_form&language=en
-	RewriteCond %{REQUEST_URI} !/(cgi-bin|css|js|plugins|rotations|themes|img)/
+	RewriteCond %{REQUEST_URI} !/(cgi-bin|css|js|plugins|rotations|themes|img|localisation)/
 	RewriteRule "^/([^/\.]+)/([^/\.]+)/([^/\.]+)" "/cgi-bin/$1.cgi?rm=$2_form&language=$3" [R,L]
 	
 	# URLs of the form /public/test become /cgi-bin/public.cgi?rm=test_form
-	RewriteCond %{REQUEST_URI} !/(cgi-bin|css|js|plugins|rotations|themes|img)/
+	RewriteCond %{REQUEST_URI} !/(cgi-bin|css|js|plugins|rotations|themes|img|localisation)/
 	RewriteRule "^/([^/\.]+)/([^/\.]+)" "/cgi-bin/$1.cgi?rm=$2_form" [R,L]
 
 	# URLs of the form /public become /cgi-bin/public.cgi
@@ -83,6 +87,19 @@
 		# 2.4 way:
 		Require all granted
 
+		#Deny from 206.45.206.151  
+	</Directory>
+
+	Alias /localisation/ /opt/fILL/localisation/
+	<Directory "/opt/fILL/localisation">
+		AllowOverride None
+		Options -MultiViews +SymLinksIfOwnerMatch +Indexes
+		IndexOptions FancyIndexing HTMLTable
+		# 2.2 way:
+		#Order allow,deny
+		#Allow from all
+		# 2.4 way:
+		Require all granted
 		#Deny from 206.45.206.151  
 	</Directory>
 
