changing languages from the login page would fail

--- a/conf/fILL.conf
+++ b/conf/fILL.conf
@@ -28,7 +28,7 @@
 
 	# /index.html is no longer the default landing page...
 	RewriteEngine On
-	RewriteRule ^/?$ /cgi-bin/public.cgi [R=302,L]
+	RewriteRule ^/?$ /cgi-bin/public.cgi?rm=login_form [R=302,L]
 
 	# Don't touch the pazpar2 stuff
 	RewriteCond %{REQUEST_URI} /pazpar2/
